--- a/bin/bAlianza.ini
+++ b/bin/bAlianza.ini
@@ -1,5 +1,5 @@
 [CONF]
-HOSTNAME=192.168.1.1
+HOSTNAME=192.168.2.12
 DATABASE=/firebird/data/balianza.fdb
 PORT=3050
 CAPTION=Balanza para expo
@@ -7,6 +7,33 @@ CAPTION=Balanza para expo
 [BALANZA]
 BAUDRATE=9600
 PORT=
+
+[EXPORT]
+
+[MAIL]
+USUARIO=isidorocaminos@alz-agro.com.ar
+CLAVE=
+HOST=smtp.gmail.com
+PUERTO=25
+ASUNTO=Autorizar pago
+
+[DESTINATARIOS]
+0=adriandibenedetto@alz-agro.com.ar
+1=ezequielchazarreta@alz-agro.com.ar
+
+[CUERPO]
+0=Hola, 
+1=Por favor autorizar o rechazar el pago desde el sistema opMercados.
+2=Gracias.
+
+[DESTINATARIOSPRUEBA]
+0=isidorocaminos@alz-agro.com.ar
+
+[CUERPOPRUEBA]
+0=Hola, 
+1=Este es un e-mail de prueba.
+2=Saludos.
+
 
 [GRILLAS]
 LISTO=clLime
@@ -18,6 +45,6 @@ EXPORTADO=$808000
 FINALIZADO=clLime
 
 [IMPRESION]
-RENGLON1=Texto del primer renglon en el .ini
-RENGLON2=Texto del segundo renglon en el .ini
-RENGLON3=Texto del tercer renglon en el .ini
+RENGLON1=ALZ Producion y Servicios SA CUIT 30-71781076-3
+RENGLON2=Santa Fe 1363, 4to Piso, Rosario (2000) - Santa Fe
+RENGLON3=Lugar de carga Ruta 31 KM 173, Rojas (2705) - Buenos Aires 
